# CodeNummy_RootFinding_Bisection

./: .clang-format  .gitignore  CMakeLists.txt  readme.md
cpp/ext/googletest/: CMakeLists.txt.in
cpp/src/: bisection.cpp  bisection.hpp  calculate_mean.cpp  calculate_mean.hpp  sgn.hpp
cpp/tests/: bisection_test.cpp  calculate_mean_test.cpp
ext/googletest/: CMakeLists.txt.in
python/src/: bisection.py  calculate_mean.py  sgn.py
python/tests/: bisection_test.py  calculate_mean_test.py  sgn_test.py
src/: bisection.cpp  bisection.hpp  sgn.hpp
tests/: bisection_test.cpp  calculate_mean_test.cpp  sgn_test.cpp
visuals/: howtogif.txt
